# ezcut-gif

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cli.md  ezcut.py  gui.md  mattermost_upload.py  preview_gif_tiles.py  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
.github/workflows/: lint.yml  release-please.yml
ezcut/: __init__.py  __main__.py
ezcut/cli/: __init__.py  app.py  prompts.py  render.py
ezcut/cli/assets/: miku.txt  miku_filled.txt  miku_inversed.txt
ezcut/cli/commands/: history.py  preview.py  share.py  split.py  upload.py
ezcut/gui/: __init__.py  __main__.py  app.py  history_tab.py  preview_tab.py  split_tab.py  upload_tab.py
ezcut/repository/: __init__.py  config.py  credentials.py  history.py
ezcut/services/: __init__.py  auth.py  config.py  exceptions.py  gallery.py  history.py  previewer.py  split_workflow.py  splitter.py  uploader.py  version.py
ezcut/store/: __init__.py  constants.py  models.py  state.py
ezcut/utils/: __init__.py  emoji_txt.py  frames.py  grid.py  naming.py  optimize.py
legacy/: ezcut.py  preview_gif_tiles.py
