[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezcut"
version = "0.1.0"
description = "GIF를 그리드로 분할하여 Mattermost 커스텀 이모지로 업로드하는 CLI/GUI 도구"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
keywords = ["gif", "mattermost", "emoji", "split", "grid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "Pillow>=9.0",
    "questionary>=2.1.1",
    "selenium>=4.41.0",
    "typer>=0.24.1",
    "keyring>=25.7.0",
    "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/S-P-A-N/ezcut-gif"
Repository = "https://github.com/S-P-A-N/ezcut-gif"
Issues = "https://github.com/S-P-A-N/ezcut-gif/issues"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[project.scripts]
ezcut = "ezcut.cli:main"
ezcut-gui = "ezcut.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["ezcut"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
